Fixed leaderboard layout issues

--- a/frontend/src/components/styles/leaderboard.css
+++ b/frontend/src/components/styles/leaderboard.css
@@ -1,10 +1,11 @@
 #leaderboard {
   width: 100%;
-  height: 400px;
+  height: 100%;
   overflow: auto;
   min-width: 500px;
   padding: 0 20px 0 20px;
 }
+
 #spinimage {
   width: 450px;
   height: 300px;
@@ -47,14 +48,19 @@
   vertical-align: middle;
 }
 
-#totalcolumn {
-  vertical-align: middle;
-  text-align: center;
+#leaderboard th {
+  font-size: 16px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  padding-right: 10px;
+  height: 45px;
+  text-align: left;
+  vertical-align: top;
 }
 
-.leaderboard-headings {
-  font-size: 14px;
-  padding-bottom: 20px;
+#totalcolumn {
+  vertical-align: top;
+  text-align: center;
 }
 
 .scrollable {
