--- a/frontend/src/components/styles/leaderboardcontainer.css
+++ b/frontend/src/components/styles/leaderboardcontainer.css
@@ -1,29 +1,36 @@
 #content-container {
-  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
-  display: -ms-flexbox; /* TWEENER - IE 10 */
-  display: -webkit-flex;
-  display: flex;
   justify-content: space-between;
-  padding: 0 20px 0 20px;
 }
 
 #sub-header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
-  padding-top: 10px;
-  vertical-align: middle;
-  text-align: center;
+  text-align: left;
 }
 
 #title-container {
   display: inline;
 }
 
-#content-container table {
-  width: 95%;
+#header-table {
+  width: 100%;
+  margin-top: 20px;
+}
+
+#body-table {
+  width: 100%;
   height: 75%;
+  margin-top: 20px;
+}
+
+.leader-col {
+  width:75%;
+}
+
+.profile-col {
+  width:25%;
+}
+
+#content-container thead {
+  text-align: left;
 }
 
 #content-container tbody {
@@ -32,7 +39,13 @@
 
 .page-title {
   font-size: 25px;
+  width:20%;
   margin-left: 20px;
+}
+
+.filter {
+  width: 80%;
+  text-align: right;
 }
 
 .timestamp {
